# simplekanainput

./: .gitignore  Cargo.toml  Help.md  LICENSE-APACHE  LICENSE-MIT  README.md  Trunk.toml  build.rs  index.html  radicals.incl
.cargo/: config.toml
docs/: index.html  simplekanainput-8648bb80688f5e1f.js
src/: appstate.rs  conv.rs  detect_edit.rs  eframe.rs  ipc.rs  kana.rs  kanji.rs  main.rs  radicals.rs  segment.rs  sfml.rs  ui.rs
src/ui/: about.rs  dict.rs  help.rs  input.rs  kanji_ui.rs  theme.rs
