[package]
name = "simplekanainput"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
backend-sfml = ["dep:egui-sfml", "dep:sfml-xt", "dep:arboard"]
backend-eframe = ["dep:eframe"]
ipc = ["dep:existing_instance"]
default = ["backend-eframe", "ipc"]

[dependencies]
anyhow = "1.0.81"
jmdict = { git = "https://github.com/crumblingstatue/rust-jmdict.git", features = [
    "scope-uncommon",
    "scope-archaic",
] }
serde = { version = "1.0.197", features = ["derive"] }
mugo = { git = "https://github.com/crumblingstatue/mugo.git", features = ["labels"] }
egui_extras = { version = "0.29", default-features = false }
egui_commonmark = { git = "https://github.com/lampsitter/egui_commonmark.git", default-features = false, features = [
    "pulldown_cmark",
] }
existing_instance = { git = "https://github.com/crumblingstatue/rust-existing-instance.git", optional = true }
mugo-jmdict = { git = "https://github.com/crumblingstatue/mugo-jmdict.git" }

# SFML backend
egui-sfml = { git = "https://github.com/crumblingstatue/egui-sfml.git", optional = true }
sfml-xt = { git = "https://github.com/crumblingstatue/sfml-xt.git", optional = true }
arboard = { version = "3.3.2", optional = true }

# eframe backend
eframe = { version = "0.29", optional = true }

# Eframe (web)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# Compile deps with optimizations in dev mode
[profile.dev.package."*"]
opt-level = 2

[build-dependencies]
vergen-gitcl = { version = "1.0.0", default-features = false, features = ["build", "cargo", "rustc"] }

[patch."https://github.com/crumblingstatue/mugo.git"]
mugo = { path = "/home/dew/projects/github/mugo" }
