[package]
name = "simplekanainput"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
backend-sfml = ["dep:egui-sfml", "dep:sfml-xt", "dep:arboard"]
backend-eframe = ["dep:eframe"]
ipc = ["dep:existing_instance"]
default = ["backend-eframe", "ipc"]

[dependencies]
anyhow = "1.0.81"
jmdict = { git = "https://github.com/crumblingstatue/rust-jmdict.git", features = [
    "scope-uncommon",
    "scope-archaic",
] }
serde = { version = "1.0.197", features = ["derive"] }
mugo = { git = "https://github.com/crumblingstatue/mugo.git", features = ["labels"] }
egui_extras = { version = "0.31", default-features = false }
egui_commonmark = {version = "0.20.0", default-features = false, features = [
    "pulldown_cmark",
] }
egui_colors = "0.7.0"
existing_instance = { git = "https://github.com/crumblingstatue/rust-existing-instance.git", optional = true }
mugo-jmdict = { git = "https://github.com/crumblingstatue/mugo-jmdict.git" }

# SFML backend
egui-sfml = { version = "0.9.0", optional = true }
sfml-xt = { version = "0.2.0", optional = true }
arboard = { version = "3.3.2", optional = true }

# eframe backend
eframe = { version = "0.31", optional = true }
rand = "0.8.5"
strsim = "0.11.1"

# Eframe (web)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# Compile deps with optimizations in dev mode
[profile.dev.package."*"]
opt-level = 2

[build-dependencies]
vergen-gitcl = { version = "1.0.0", default-features = false, features = ["build", "cargo", "rustc"] }
